--- a/app/views/emailConfirmed.scala.html
+++ b/app/views/emailConfirmed.scala.html
@@ -23,10 +23,10 @@
         
         
         <!-- Angular JS -->
-        <script src="@routes.Assets.versioned("bower_components/angular/angular.min.js")"></script>
-        <script src="@routes.Assets.versioned("bower_components/angular-ui-router/release/angular-ui-router.min.js")"></script>
-        <script src="@routes.Assets.versioned("bower_components/angular-cookies/angular-cookies.min.js")"></script>
-        <script src="@routes.Assets.versioned("javascripts/angular/ui-bootstrap-tpls-0.14.3.min.js")"></script>
+        <script src="@routes.Assets.versioned("javascripts/lib/angular.min.js")"></script>
+        <script src="@routes.Assets.versioned("javascripts/lib/angular-ui-router.min.js")"></script>
+        <script src="@routes.Assets.versioned("javascripts/lib/angular-cookies.min.js")"></script>
+        <script src="@routes.Assets.versioned("javascripts/lib/ui-bootstrap-tpls-0.14.3.min.js")"></script>
         <!-- Jquery JS -->
         <script src="@routes.Assets.versioned("javascripts/lib/bootstrap.min.js")" ></script>
         <script src="@routes.Assets.versioned("javascripts/base.js")"></script>
