--- a/public/partials/home/partial-home-content.html
+++ b/public/partials/home/partial-home-content.html
@@ -1,1 +1,4 @@
-<h1>Inicio</h1>
+<div class="container">
+	<h1>Bienvenido!</h1>
+	<h2>Si deseas agendar una cita en la clinica haz click en el enlace citas->reservar.</h2>
+</div>
