--- a/app/views/emailMessage.scala.html
+++ b/app/views/emailMessage.scala.html
@@ -22,8 +22,7 @@
 			<h1 class="text-center">Se te ha enviado un correo electrónico a la dirección <strong>@email</strong>. Se te redirigirá a la página principal... </h1>
 		</div>
 		<!-- Angular JS -->
-		<script src="@routes.Assets.versioned("bower_components/angular/angular.min.js")"></script>
-		<script src="@routes.Assets.versioned("javascripts/angular/emailHome.js")" ></script>		
-		<script src="@routes.Assets.versioned("javascripts/angular/controllers/emailMessage.js")"></script>		
+		<script src="@routes.Assets.versioned("javascripts/lib/angular.min.js")"></script>
+		<script src="@routes.Assets.versioned("javascripts/angular/controllers/home/emailMessage.js")"></script>
 	</body>
 </html>
