Correjido bug en emailmessage.js

--- a/app/views/emailMessage.scala.html
+++ b/app/views/emailMessage.scala.html
@@ -11,7 +11,7 @@
 		<link href="@routes.Assets.versioned("stylesheets/font-awasome.css")" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,400,600" rel="stylesheet">
 	</head>
-	<body ng-app="EmailHome">
+	<body ng-app="emailMessage">
 		<nav class="navbar navbar-default container-fluid">
 			<div class="navbar-header">
 				<a class="navbar-brand" ui-sref=".content">Clinica Dental Sonrisitas</a>
